// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connect 1`] = `Object {}`;

exports[`connect with init as function 1`] = `
Object {
  "some": "state",
}
`;

exports[`connect with init as object 1`] = `
Object {
  "some": "state",
}
`;

exports[`connect with pending function state 1`] = `
Object {
  "some": "state",
}
`;

exports[`connect with pending object state 1`] = `
Object {
  "some": "state",
}
`;

exports[`connect with plugin, no state and dispatch 1`] = `Object {}`;

exports[`connect with plugin, no state and dispatch 2`] = `
Object {
  "some": "state",
}
`;

exports[`connect with plugin, state function  1`] = `
Object {
  "action": [Function],
  "some": "state",
  "thing": 1,
}
`;

exports[`dispatch action 1`] = `
Object {
  "some": "state",
}
`;

exports[`force dispatch 1`] = `
Object {
  "some": "forced state",
}
`;

exports[`query with action 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"some\\": \\"state\\",
+ }"
`;

exports[`register on connected store 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"some\\": \\"state\\",
+ }"
`;

exports[`register on connected store with init as function 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"some\\": \\"state\\",
+ }"
`;

exports[`useStore 1`] = `
Object {
  "id": undefined,
  "notify": Object {
    "plugin": Object {
      "dispatch": [Function],
    },
    "subscribe": [Function],
    "subscribers": Array [],
  },
  "pending": Array [],
}
`;

exports[`useStore named 1`] = `
Object {
  "d": [Function],
  "dispatch": [Function],
  "id": "store1",
  "notify": Object {
    "plugin": Object {
      "dispatch": [Function],
    },
    "subscribe": [Function],
    "subscribers": Array [],
  },
  "producer": [Function],
  "query": [Function],
  "state": Object {},
}
`;

exports[`useStore named 2`] = `Object {}`;
